# Task-Delegator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README_IMPROVEMENTS.md  async_interactive_swarm.py  async_swarm.py  collaborative_swarm.py  config_manager.py  interactive_worker.py  pyproject.toml  requirements.txt  run_collaborative.py  shared_context.py  start_delegator.sh  start_worker.sh  swarm_cli.py  task_loader.py
.github/workflows/: ci.yml
config/: delegator.json  worker.json
delegator/: task_manager.py
examples/: tasks.csv  tasks.json  tasks.txt  tasks.yaml
task_delegator/: __init__.py  account_registry.py  api_adapter.py  cli.py  core.py  monitor.py  secure_runner.py
tests/: __init__.py  test_account_registry.py  test_api_adapter.py  test_cli.py  test_core.py  test_integration.py  test_monitor.py  test_secure_runner.py
workers/: worker.py
